terraform/sg_web.tf
resource "aws_security_group" "grupo4_sg_web" {
  vpc_id = aws_vpc.grupo4_vpc.id
  name = "grupo4_sg_web"
  description = "HTTPS:443;HTTP:80"

  ingress {
    protocol = "tcp"
    from_port = 443
    to_port = 443
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTPS:443"
  }
  ingress {
    protocol = "tcp"
    from_port = 80
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP:80"
  }
  ingress {
    protocol = "tcp"
    from_port = 5173
    to_port = 5173
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP:5173"
  }

  egress {
    protocol = "-1"
    from_port = 0
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
    description = "ALL:-1"
  }

  egress {
    from_port   = 15672
    to_port     = 15672
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Saida para RabbitMQ Management (15672)"
  }

  egress {
    from_port   = 5672
    to_port     = 5672
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Saida para RabbitMQ AMQP (5672)"
  }

  tags = {
    Name = "grupo4-sg-web"
  }
}
